# GoTrackItDoc

./: .gitignore  .readthedocs.yaml  GoTrackIt.py  pyproject.toml
.github/workflows/: python-publish.yml
docs/: 地图匹配原理.md  简介.md
docs/source/: aaa.rst  conf.py  index.rst  test.rst  如何使用.rst  简介.rst  类方法汇总 - 副本.rst  类方法汇总.rst
src/gotrackitdoc/: __init__.py  test.py
